# supertree

./: .gitignore  CITATION  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: python_docs.md  supertree_support_and_description_docs.md
examples/: CustomTreeExample.ipynb  GradientBoostExample.ipynb  IPyWidgetsExample.ipynb  LightGBMAndXGBoostExample.ipynb  MainExample.ipynb  ShowSampleExample.ipynb  Untitled.ipynb  output.html  output.json  tree.html  treedata.json
examples/.virtual_documents/: GradientBoostExample.ipynb  LightGBMAndXGBoostExample.ipynb  MainExample.ipynb  Untitled.ipynb
scripts/: build_js.sh
supertree/: __init__.py  model_loader.py  node.py  supertree.py  templatehtml.py  treedata.py
supertree/js/: script.js  style.css  supertree.min.js
supertree/js/dependencies/: d3vs.js
supertree/js/src/: geometry.js  icons.js  index.js  layout.js  node_renderers.js  shared.js  toolbar.js  tree_app.js  ui_config.js  viewport.js
supertree/src/: export.ts
